[package]
name = "ext4fs"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
vfscore = { workspace = true }
syscalls = { workspace = true }
sync = { workspace = true }
libc-core = { workspace = true }
lwext4_rust = { git = "https://github.com/Azure-stars/lwext4_rust.git", default-features = false, rev = "2e56b0a" }
