[package]
name = "fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bitflags = "2.9.1"
vfscore = { workspace = true }
syscalls = { workspace = true }
sync = { workspace = true }
libc-core = { workspace = true }
