[package]
name = "vfscore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.9.1"
downcast-rs = { version = "2.0.1", default-features = false, features = [
  "sync",
] }
syscalls = { workspace = true }
libc-core = { workspace = true }
